# stromtutorial.github.io

./: .gitignore  404.html  Gemfile  README.md  _config-base.yml  _config-linux.yml  _config-mac.yml  _config-win.yml  _config.yml  index.html  index.md
_includes/: footer.html  navbar.html  navlinks.html  subparts.html  title.html
_layouts/: default.html  home.html  steps.html
_plugins/: filters.rb  indexer.rb  indexterm.rb  page_ref.rb  polemoji.rb
_scripts/: polcodesnippets.py  stripmarkdowntags.py
acknowledgements/: index.html
apps/galax/src/: galax.hpp  galaxdata.hpp  galaxinfo.hpp  galaxtypes.hpp  galaxutil.hpp  main.cpp  node.hpp  phyloinfo.hpp  split.hpp  strom.hpp  tree_manip.hpp
apps/galax/test/: figure2.tre
assets/artwork/: Raddedge.txt  Rdeledge.txt  addedge.ai  bayes-rule.ai  deleteedge.ai  jacobian.ai  newick-rooted.ai  newick-unrooted.ai  partitioned.ai  power-posterior.ai  reroot.ai  site-likelihood-rescaled.ai  site-likelihood.ai  steppingstone-slice.ai  steppingstone-spacing.ai  steppingstonebasic.R  steppingstoneseries.R  strom-logo.ai  unpartitioned.ai
assets/css/: main.css  main.scss
assets/data/: partitioned-example.nex  protea9gene.nex  protea9gene.tre  rbcl10.nex  rbcl10.tre  rbcl10poly.tre  rbcl738.nex  rbcl738nj.tre  test.tre
assets/js/: highlight.js
citation/: index.html
home/: 404.md  acknowledgements.md  citation.md  launch.md  license.md  mainindex.md  steps.md
license/: index.html
linux/acknowledgements/: index.html
linux/citation/: index.html
linux/license/: index.html
linux/steps/: index.html
linux/steps/step-01/: setup-IDE.html
linux/steps/step-02/: 00-node-and-tree-classes.html  01-create-node-class.html  02-create-tree-class.html  03-create-main-function.html  04-test-node-and-tree.html
linux/steps/step-03/: 00-saving-trees.html  01-create-rooted-three-taxon-tree.html  02-test-tree-creation.html
linux/steps/step-07/src/: meson.build  node.hpp  tree.hpp
mac/acknowledgements/: index.html
mac/citation/: index.html
mac/license/: index.html
mac/steps/: index.html
mac/steps/step-01/: setup-IDE.html
steps/step-01/: setup-IDE.md
steps/step-02/: 00-node-and-tree-classes.md  01-create-node-class.md  02-create-tree-class.md  03-create-main-function.md  04-test-node-and-tree.md
steps/step-03/: 00-saving-trees.md  01-create-rooted-three-taxon-tree.md  02-test-tree-creation.md
steps/step-04/: 00-tree-manipulator.md  01-create-treemanip-class.md  02-test-treemanip.md
steps/step-05/: 00-saving-trees.md  01-create-newick-description.md  02-test-makenewick.md
steps/step-05/src/: main.cpp  meson.build  tree_manip.hpp
steps/step-06/: 00-building-trees.md  01-create-buildfromnewick.md  02-xstrom-exception-class.md  03-test-building-trees.md
steps/step-07/: 00-summarizing-trees.md  01-split-class.md  02-adding-splits-to-node-and-treemanip.md  03-tree-summary.md  04-test-tree-summary.md
steps/step-07/src/: main.cpp  meson.build  node.hpp  split.hpp  tree_manip.hpp  tree_summary.hpp
steps/step-08/: 00-adding-program-options.md  01-the-strom-class.md  02-testing-program-options.md
steps/step-08/src/: meson.build  tree_manip.hpp  tree_summary.hpp
steps/step-09/: 00-reading-and-storing-data.md  01-create-the-datatype-and-geneticcode-classes.md  02-create-the-partition-class.md  03-create-the-data-class.md  04-test-reading-and-storing-data.md
steps/step-09/src/: data.hpp  datatype.hpp  genetic_code.hpp  main.cpp  meson.build  partition.hpp  strom.hpp  tree_manip.hpp
steps/step-10/: 00-calculating-the-likelihood.md  01-the-likelihood-class.md  02-test-likelihood.md
steps/step-10/src/: likelihood.hpp  meson.build  node.hpp  strom.hpp  tree.hpp  tree_manip.hpp
steps/step-11/: 00-adding-the-model-class.md  01-specifying-the-model.md  02-the-model-class.md  03-the-qmatrix-class.md  04-the-asrv-class.md  05-adding-model-to-likelihood.md  06-testing-model.md
steps/step-11/src/: asrv.hpp  go.sh  likelihood.hpp  meson.build  model.hpp  node.hpp  qmatrix.hpp  strom.conf  strom.hpp  tree_manip.hpp
steps/step-12/: 00-the-large-tree-problem.md  01-large-tree-likelihood-fail.md  02-rescaling-in-beaglelib.md
steps/step-13/: 00-adding-pseudorandom-number-generator.md  01-the-lot-class.md  02-test-lot.md
steps/step-14/: 00-markov-chain-monte-carlo-mcmc.md  01-the-updater-class.md  02-the-gammashapeupdater-class.md  03-the-chain-class.md  04-testing-the-chain-class.md
steps/step-15/: 00-managing-output.md  01-the-output-manager-class.md  02-adding-helper-functions-to-data-and-model.md  03-modify-strom-and-chain.md  04-test-output-manager.md
steps/step-16/: 00-updating-other-parameters.md  01-dirichlet-updater-base-class.md  02-statefrequpdater-class.md  03-exchangeabilitiesupdater-class.md  04-subsetrelrateupdater-class.md  05-pinvar-omega-updater.md  06-test-updaters.md
steps/step-17/: 00-updating-the-tree.md  01-the-tree-updater-class.md  02-the-tree-length-updater-class.md  03-modify-chain.md  04-modify-treemanip.md  05-testing-tree-updaters.md
steps/step-18/: 00-heated-chains.md  01-modifying-strom-for-heated-chains.md  02-testing-heated-chains.md
steps/step-19/: 00-polytomies.md  01-changes-needed-to-allow-polytomies.md  01-modifying-treeupdater.md  02-testing-polytomies.md  02-the-polytomyupdater-class.md  03-modifying-the-likelihood-class.md  03-the-topo-prior-calculator.md  04-adding-topo-prior-to-updater.md  05-modifying-the-likelihood-class.md  05-testing-polytomies.md  06-modifying-node-tree-manip-class.md  06-modifying-the-tree-manip-class.md  07-adding-polytomy-updater-to-chain.md  08-modifying-model-outputmanager.md  08-testing-polytomies.md  09-adding-polytomy-options-to-strom.md  10-testing-polytomies.md
steps/step-20/: 00-steppingstone.md  01-adding-settings.md  02-modifying-chain.md  03-updating-the-updater.md  04-test-steppingstone.md
steps/step-21/: 00-conditioning-on-variability.md
win/acknowledgements/: index.html
win/citation/: index.html
win/license/: index.html
win/steps/: index.html
win/steps/step-09/src/: genetic_code.hpp  main.cpp  meson.build  strom.hpp
(+594 files in other folders)
