project('strom', 'cpp', ###start
	default_options : ['cpp_std=c++11','cpp_link_args=-static','prefix=/home/pol02003/tut/distr'],
	version : '1.0')
incl_boost = include_directories('/home/pol02003/boost_1_70_0')
executable('strom', 'main.cpp', install: true, install_dir: '.', include_directories: incl_boost)   ###end
